Fixed about, gap, themes

--- a/css/index.css
+++ b/css/index.css
@@ -301,6 +301,7 @@ body {
   {
 	padding-left: 40px;
 	padding-right: 40px;
+	height: 65vh;
   }
   
 
